--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+
+
 </head>
+
 <body>
-    
+
+    <div class="columns is-2">
+        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, quia incidunt fugiat temporibus excepturi
+            nostrum totam tempora sunt, commodi dicta voluptatem. Nam culpa modi ullam cumque quibusdam impedit
+            repellendus laborum?</h1>
+    </div>
+
+
+
 </body>
+
 </html>
