--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
 
 <body>
 
-    <div class="columns is-2">
-        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, quia incidunt fugiat temporibus excepturi
-            nostrum totam tempora sunt, commodi dicta voluptatem. Nam culpa modi ullam cumque quibusdam impedit
-            repellendus laborum?</h1>
-    </div>
+<main>
 
+    <h1>Some title</h1>
+
+</main>
 
 
 </body>
